# async-whisper

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  dev_main.py  environment.yml  pyproject.toml
async_whisper/: __init__.py  async_whisper.py  dev_main.py  logger.py  logging.py  stitch_utils.py
